# deepseek-cli

./: Cargo.toml  LICENSE  README.md
src/: main.rs  renderer.rs
